# license-detector

./: .gitignore  Dockerfile  README.md  clearml.conf.example  docker-compose.yml  model_impl.py  pyproject.toml  run.py
clearml-server-new/: docker-compose.yml
notebooks/: ppocrv5_official_training_ab_notebook (1).ipynb  train_ocr.ipynb
scripts/: model_impl.py  run.py  train.py
scripts/ocr/: __init__.py  base.py  check_ocr.py  factory.py  hf_ocr.py  postprocess.py
tools/: .env.example  .gitignore  pyproject.toml  run_generate.py
tools/ocr_labeler/: .env  cli.py  config.py  env.py  export.py  labels.py  pipeline.py  preprocess.py  providers.py
