[project]
name = "license-detector"
version = "0.1.0"
description = ""
authors = [
    {name = "poeeeri", email = "g2007gle@mail.ru"},
    {name = "monalenka", email = "emnorets@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "ultralytics (>=8.3.0,<9.0.0)",
    "opencv-python (>=4.10.0,<5.0.0)",
    "numpy (>=1.26.0,<2.0.0)",
    "clearml (>=1.16.5,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
